--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div class="container"></div>
   </body>
+  <!-- compiled js for entire app -->
   <script src="/bundle.js"></script>
 </html>
